--- a/src/pages/aboutus/component/cardGrid/CardGrid.module.scss
+++ b/src/pages/aboutus/component/cardGrid/CardGrid.module.scss
@@ -33,11 +33,27 @@
 @media (max-width: 768px) {
     .card {
         margin-block: 1rem;
+
+        h2 {
+            font-size: 16px;
+        }
+
+        p {
+            font-size: 1.25rem;
+        }
     }
 }
 
 @media (max-width: 576px) {
     .card {
         margin-block: 1rem;
+
+        h2 {
+            font-size: 16px;
+        }
+
+        p {
+            font-size: 1.25rem;
+        }
     }
 }
