--- a/src/pages/aboutus/globalImpact/GlobalImpact.module.scss
+++ b/src/pages/aboutus/globalImpact/GlobalImpact.module.scss
@@ -5,7 +5,7 @@
     padding-inline: 2rem;
     background-color: #F6F3FC;
     height: auto;
-    padding-block-end: 3rem;
+    padding-block: 4rem;
     font-family: 'Inter';
     max-width: 1800px;
     margin: auto;
@@ -70,6 +70,7 @@
 
                 .para {
                     text-align: center;
+                    font-size: 1.25rem;
                 }
             }
         }
@@ -92,8 +93,10 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                gap: 1rem;
 
                 .para {
+                    font-size: 1.25rem;
                     text-align: center;
                 }
             }
